Fixed codox
Suppressing the reflection warning by denying it was causing error